--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ main{
     background: transparent;
     border: 3px solid rgba(166, 165, 165, 0.3);
     cursor: pointer;
-    margin: 30px 130px;
+    margin: 30px 130px 20px 130px;
 }
 
 .btn-line1{
@@ -86,9 +86,9 @@ main{
 .nav-menu{
     list-style: none;
     display: flex;
-    gap: 10px;
+    gap: 30px;
     background-image: linear-gradient(to bottom, rgb(230, 230, 230), white);
-    padding: 40px 130px 50px 60px;
+    padding: 40px 130px 30px 60px;
 }
 
 .nav-link{
@@ -166,4 +166,17 @@ main{
 
 .container5{
     background-image: url(images/beach.jpg);
+}
+
+.plus-btn{
+    width: 50px;
+    height: 50px;
+    background-color: #9ccdfe;
+    font-size: 2rem;
+    cursor: pointer;
+    border: 4px solid #abe3fb;
+    position: fixed;
+    bottom: 20px;
+    right: 130px;
+    border-radius: 10px;
 }
