--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main{
 }
 
 
-.sidebar{  
+.sidebar{
     height: 100vh;
     border-right: 0.5px solid black;
 }
@@ -22,11 +22,17 @@ main{
     border-bottom: 0.5px solid rgb(166, 165, 165);
 }
 
-.news-articel{
+.news-articel, .read-more-container{
     background-color: #eaf6fc;
     font-family: "Poppins", sans-serif;
     padding: 25px 15%;
     border-bottom: 0.5px solid rgb(166, 165, 165);
+}
+
+.read-more-container{
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: 400;
 }
 
 .news-articel:nth-last-child(even){
@@ -37,6 +43,8 @@ main{
     color: #0C356A;
     font-weight: 700;
 }
+
+.read-more
 
 .news-title{
     font-size: 0.9rem;
@@ -171,10 +179,10 @@ main{
 .plus-btn{
     width: 50px;
     height: 50px;
-    background-color: #9ccdfe;
+    background-color: #DDF2FD;
     font-size: 2rem;
     cursor: pointer;
-    border: 4px solid #abe3fb;
+    border: 4px solid #c2ebfc;
     position: fixed;
     bottom: 20px;
     right: 130px;
